# TrustDynamics

./: .gitignore  .python-version  README.md  m.json  pyproject.toml  requirement.txt
BASEMENT/: agent.py  friedkin.py  influence_matrix.py  model complex.py  organizational_trust copy.py
BASEMENT/utils/: cosine_similarity.py
examples/average_opinions_vs_organization_opinion/: analysis.py  run.py
examples/different_initial_opinions/: analysis.py  run.py
examples/example_0/: main.py
examples/multiple_adaption_cases/: analysis.py  run.py
examples/single_small_organization/: analysis.py  model.json  run.py
examples/teams_vs_organization_opinion/: analysis.py  model.json  run.py
examples/three_players_only/: analysis.py  config long.py  config.py  run.py  settings.csv
paper/: paper.md
tests/: test_organization.py
tests/test_organization/: test_generate.py  test_organization.py  test_trust.py
tests/test_organization_new/: test_department.py
trustdynamics/: __init__.py  agent.py  model.py  opinion.py
trustdynamics/consensus/: __init__.py  degroot.py
trustdynamics/model/: initialization.py  model.py  serialization.py  update.py
trustdynamics/models/: degroot.py
trustdynamics/organization/: __init__.py  add.py  generate.py  generate_organization.py  graphics.py  initialization.py  organization.py  organizational_trust.py  serialization.py  stat.py  trust.py
trustdynamics/technology/: __init__.py  technology.py
trustdynamics/trust/: degroot.py
trustdynamics/utils/: __init__.py  bounded_random_with_exact_mean.py  map_to_range.py  new_id.py  (+3 more)
(+63 files in other folders)
