[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["trustdynamics", "trustdynamics.*"]

[tool.setuptools.package-data]
trustdynamics = ["py.typed"]

[project]
name = "trustdynamics"
version = "0.0.2"
description = "A Python framework for modeling trust dynamics in human–AI and organizational networks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Aslan Noorghasemi", email = "aslann@cmu.edu" },
    { name = "Christopher McComb", email = "ccm@cmu.edu" },
]
dependencies = [
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "tqdm",
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]